name:                story
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          awesomelyawesome@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Planner,
                       Planner.Types,
                       Planner.Plan,
                       Planner.IPOCL,
                       Planner.Constraints,
                       Planner.DiscTrie,
                       Planner.Monad,
                       FF.Compile,
                       FF.Compile.AST,
                       FF.Compile.Problem,
                       FF.Compile.Operators,
                       FF.ConnGraph,
                       FF.Extract,
                       FF.Fixpoint,
                       FF.Input,
                       FF.RefSet,
                       FloydWarshall,
                       Pretty
  build-depends:       base >=4.6 && <5,
                       containers >=0.5,
                       monadLib >=3.7,
                       pretty,
                       GraphSCC,
                       array,
                       text,
                       hashable,
                       unordered-containers,
                       heaps
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example
  main-is:             Main.hs
  hs-source-dirs:      example
  build-depends:       base >=4.6 && <5,
                       pretty,
                       bytestring,
                       story
  default-language:    Haskell2010
