name:                story
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          awesomelyawesome@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Types
                       Fixpoint
                       Input
                       Input.Parser
                       Input.Types
  build-depends:       base >=4.6 && <5,
                       containers >= 0.5,
                       monadLib >=3.7,
                       array,
                       text,
                       hashable,
                       unordered-containers,
                       heaps,
                       s-cargot,
                       parsec,
                       pretty-show
  hs-source-dirs:      src
  default-language:    Haskell2010

-- executable example
--   main-is:             Main.hs
--   hs-source-dirs:      example
--   build-depends:       base >=4.6 && <5,
--                        pretty,
--                        bytestring,
--                        story
--   default-language:    Haskell2010
