name:                story
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          awesomelyawesome@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Types
                       Fixpoint
                       Input
                       Input.Ground
                       Input.Parser
                       Input.Render
                       Input.Types
  build-depends:       base >=4.6 && <5,
                       containers >= 0.5,
                       monadLib >=3.7,
                       array,
                       text,
                       hashable,
                       unordered-containers,
                       heaps,
                       s-cargot,
                       parsec,
                       pretty-show
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ground-problem
  hs-source-dirs:      ground-problem
  main-is:             Main.hs
  build-depends:       base >=4.6 && <5,
                       text,
                       story
  default-language:    Haskell2010
  ghc-options:         -Wall
